--- a/projects/demo/src/app/pages/home/home.component.html
+++ b/projects/demo/src/app/pages/home/home.component.html
@@ -1,8 +1,7 @@
 <header focusOnNavigation class="header-background" aria-label="Get started" id="homepage-header">
   <div class="header-section">
     <div class="header-headline">
-      <h1>Terry Lib</h1>
-      <h2>Custom Themeable Angular Material Component</h2>
+      <h1>Ngx-TotkAmiiboList</h1>
     </div>
     <div class="header-start">
       <a mat-raised-button>Get started</a>
@@ -11,8 +10,6 @@
 </header>
 <main class="home-main">
   <mat-card>
-    <h2>Editor Js</h2>
-    <mat-divider></mat-divider>
-    <terry-lib></terry-lib>
+    <h1>Test</h1>
   </mat-card>
 </main>
