--- a/projects/demo/src/app/components/navbar/navbar.component.html
+++ b/projects/demo/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar-header">
   <a mat-button routerLink="/">
-    <mat-icon class="workshop-logo">tips_and_updates</mat-icon>
-    <span>terry-lib</span>
+    <mat-icon class="workshop-logo">view_list</mat-icon>
+    <span>Ngx-TotkAmiiboList</span>
   </a>
   <div class="flex-spacer"></div>
   <theme-picker></theme-picker>
