--- a/projects/demo/src/app/pages/home/home.component.html
+++ b/projects/demo/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
   </div>
 </header>
 <main class="home-main">
-  <mat-card>
+  <mat-card appearance="outlined">
     <h1>Test</h1>
   </mat-card>
 </main>
