--- a/projects/demo/src/assets/styles/_general.scss
+++ b/projects/demo/src/assets/styles/_general.scss
@@ -7,6 +7,19 @@
   background: rgba(0, 0, 0, 0);
 }
 
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.page-list.cdk-drop-list-dragging .page-item:not(.cdk-drag-placeholder),
+.category-list.cdk-drop-list-dragging .category-item:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
 html,
 body {
   height: 100vh;
@@ -48,11 +61,4 @@ pre {
   }
 }
 
-.mat-mdc-card {
-  transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: block;
-  position: relative;
-  padding: 16px;
-  border-radius: 4px;
-  margin-bottom: 22px;
-}
+
