--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -36,9 +36,8 @@
   outline: 0px solid transparent;
 }
 
-.successful-text {
-  color: #66BB6A;
+.main-content {
+  display: block;
+  margin-top: 64px;
 }
-.failure-text {
-  color: #EF5350;
-}
+
