--- a/projects/demo/src/assets/styles/custom-themes/indigo-amber.scss
+++ b/projects/demo/src/assets/styles/custom-themes/indigo-amber.scss
@@ -27,3 +27,7 @@ mat-card.mat-mdc-card.mdc-card {
 .workshop-menu-nav, .workshop-controls-panel, .paginator {
   background: #fafafa
 }
+
+.demo-logo-container {
+  color: #FFF!important;
+}
