--- a/projects/demo/src/app/components/navbar/_navbar-theme.scss
+++ b/projects/demo/src/app/components/navbar/_navbar-theme.scss
@@ -8,10 +8,10 @@
   $background: map.get($theme, background);
   $foreground: map.get($theme, foreground);
 
-  navbar {
+  ngx-navbar {
     color: mat.get-color-from-palette($primary, default-contrast);
 
-    .navbar-header {
+    .navbar-header, .docs-navbar {
       background: mat.get-color-from-palette($primary);
 
       & a:hover, & a:focus {
