--- a/projects/demo/src/app/pages/home/_home-theme.scss
+++ b/projects/demo/src/app/pages/home/_home-theme.scss
@@ -8,7 +8,7 @@
   $background: map.get($theme, background);
   $foreground: map.get($theme, foreground);
 
-  app-home {
+  ngx-home {
     color: mat.get-color-from-palette($foreground, text);
 
     .header-background {
