--- a/projects/demo/src/app/components/navbar/_navbar-theme.scss
+++ b/projects/demo/src/app/components/navbar/_navbar-theme.scss
@@ -10,7 +10,9 @@
 
   ngx-navbar {
     color: mat.get-color-from-palette($primary, default-contrast);
-
+    .mdc-button__label {
+      color: mat.get-color-from-palette($primary, default-contrast);
+    }
     .navbar-header, .docs-navbar {
       background: mat.get-color-from-palette($primary);
 
