--- a/projects/demo/src/app/pages/map/_map-theme.scss
+++ b/projects/demo/src/app/pages/map/_map-theme.scss
@@ -8,7 +8,7 @@
   $background: map.get($theme, background);
   $foreground: map.get($theme, foreground);
 
-  ngx-viewer {
+  ngx-map {
     color: mat.get-color-from-palette($foreground, text);
   }
 }
